style: fixed all text aligns in detail project

--- a/Frontend/src/pages/project/detail/Detail.module.css
+++ b/Frontend/src/pages/project/detail/Detail.module.css
@@ -262,4 +262,10 @@ p {
 			margin: 0;
 		}
 	}
+
+	.description,
+	.promoterTitle,
+	.promoterName {
+		text-align: center;
+	}
 }
